fixed width registrationtext so it do not jump.

--- a/public/create/pages/css/shared/default.css
+++ b/public/create/pages/css/shared/default.css
@@ -262,6 +262,7 @@ textarea {
 	font-weight: 900;
 	line-height: 32px;
 	margin: 0 10px 0 0;
+	width: 325px;
 	float: left;
 }
 .registration-text.validate {
